# advent_of_code_2023

./: .gitignore  Makefile  README.md  pyproject.toml
day_01/: compute.py  test_compute.py
day_02/: compute.py  test_compute.py
day_03/: compute.py  test_compute.py
day_04/: compute.py  test_compute.py
day_05/: compute.py  test_compute.py
day_06/: compute.py  test_compute.py
day_07/: compute.py  test_compute.py
day_08/: compute.py  test_compute.py
day_09/: compute.py  test_compute.py
day_10/: compute.py  test_compute.py
day_11/: compute.py  test_compute.py
day_12/: compute.py  test_compute.py
day_13/: compute.py  test_compute.py
day_14/: compute.py  test_compute.py
day_15/: compute.py  test_compute.py
day_16/: compute.py  test_compute.py
day_17/: compute.py  test_compute.py
day_18/: compute.py  test_compute.py
day_19/: compute.py  test_compute.py
day_20/: compute.py  test_compute.py
day_21/: compute.py  test_compute.py
day_22/: compute.py  test_compute.py
day_23/: compute.py  test_compute.py
day_24/: compute.py  test_compute.py
day_25/: compute.py  test_compute.py
template/: compute.py  test_compute.py
