[tool.poetry]
name = "advent_of_code_2023"
version = "0.1.0"
description = "Answers for https://adventofcode.com/2023/"
authors = ["Thomas Richard"]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.dev-dependencies]
pytest = "*"
ruff = "*"
isort = "*"
pytest-random-order = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 2

[tool.pytest.ini_options]
addopts = ['--random-order']

[tool.ruff]
line-length = 120
# Default: ["E4", "E7", "E9", "F"]
# E203: whitespace-before-punctuation (in preview for version 0.1.5)
# ISC: implicit-str-concat (in preview for version 0.1.5)
extend-select = ["C90", "Q", "W", "I", "ISC", "E203", "COM"]
# I001: unsuorted imports - fails when having multiline imports?
ignore = ["I001"]

[tool.ruff.lint.mccabe]  # C90
max-complexity = 10

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]  # Q
inline-quotes = "single"

[tool.ruff.lint.pycodestyle]  # E,W
max-doc-length = 100

[tool.ruff.lint.isort] # I
split-on-trailing-comma = false
known-first-party = ["tests"]
